<resources>
    <string name="app_name">CustomViewer</string>
    <string name="title_activity_collection_list">CollectionListActivity</string>
    <string name="no_internet">No internet connection.</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="detail_type">Type</string>
    <string name="detail_inventory">Inventory</string>
    <string name="detail_vendor">Vendor</string>
    <string name="detail_tag">Tags</string>
    <string name="detail_body">Body</string>

    <!--<string name="atitle">Price</string>-->
    <!--<string name="atype">Inventory</string>-->
    <!--<string name="ainventory">Vendor</string>-->
    <!--<string name="avendor">Tags</string>-->
    <!--<string name="abody">Body</string>-->
    <!--<string name="atags">Price</string>-->


</resources>
