<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/top_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:paddingStart="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:paddingEnd="0dp"
                android:background="@color/temp_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Collection Title"/>

                </LinearLayout>




                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_type"/>

                        <TextView
                            android:id="@+id/details_type"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_inventory"/>

                        <TextView
                            android:id="@+id/details_inventory"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_vendor"/>

                        <TextView
                            android:id="@+id/details_vendor"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </LinearLayout>






                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/detail_body"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_tag"/>

                <TextView
                    android:id="@+id/details_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/detail_tag"/>
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>